--- a/showyear.html
+++ b/showyear.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
-    <head>
-    </head>
-        <body>
-            <div id="year">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div id="#year">
 
-            </div>
-        </body>
-    <footer>
-    </footer>
+    </div>
+    <script src="script.js"></script>
+</body>
 </html>
