--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="#year">
+    <div id="year">
 
     </div>
     <script src="script.js"></script>
